--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,16 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+    implementation 'android.arch.lifecycle:livedata:1.1.1'
+    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.compose.ui:ui:1.1.0-beta01"
+    implementation "androidx.compose.material:material:1.1.0-beta01"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.1.0-beta01"
+    implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1"
+    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 }
